docs: add all opening handlers documentation
