# handler/listOpenings.go
@@ -7,6 +7,16 @@ import (
 	"github.com/mallet-zn/gopportunities/schemas"
 )
 
+// @Basepath /api/v1
+
+// @Summary List Openings
+// @Description List all job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
